fix: fixed post creation date alignment

--- a/app/components/post-card/post-card-header/PostCardHeader.module.scss
+++ b/app/components/post-card/post-card-header/PostCardHeader.module.scss
@@ -24,6 +24,8 @@
 	.postMenu {
 		margin-left: auto;
 		cursor: pointer;
+		height: fit-content;
+		align-items: center;
 		display: flex;
 		p {
 			font-size: 12px;
